--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style3.css" />
   </head>
   <body>
-    <div class="carousel">
+    <div class="carousel ">
       <div class="carousel-item carousel-item-visible">
         <img src="images/1.jpg" />
+        <h2 class="film-title red">Joker</h2>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ">
         <img src="images/2.jpg" />
+        <h2 class="film-title white">Baby Driver</h2>
       </div>
       <div class="carousel-item">
         <img src="images/3.jpg" />
+        <h2 class="film-title red">Parasite</h2>
       </div>
 
       <div class="carousel-actions">
