Added information to the README.md file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style3.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="carousel ">
+    <div id="hi" class="carousel">
       <div class="carousel-item carousel-item-visible">
         <img src="images/1.jpg" />
         <h2 class="film-title red">Joker</h2>
@@ -20,7 +21,7 @@
       </div>
 
       <div class="carousel-actions">
-        <button id="carousel-button-prev" aria-label="Previous Slidex"><</button>
+        <button id="carousel-button-prev" aria-label="Previous Slide"><</button>
         <button id="carousel-button-next" aria-label="Next Slide">></button>
       </div>
     </div>
